Half part video on mobile padding correction

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -492,11 +492,11 @@ body a {
   position: absolute;
   right: 0;
   bottom: 0;
-  left: 0;
   height: 50%;
   overflow: hidden;
   opacity: 1;
   background-color: #fff;
+  width: 100%;
 }
 
 .half-part_video--hidden {
@@ -2928,6 +2928,10 @@ ul.brand-listing li {
   .approach_contant .col-lg-3:first-child .content,
   .approach_contant .col-lg-3:nth-child(2) .content {
     margin-bottom: 4em;
+  }
+  .half-part_video {
+    width: auto;
+    height: 100%;
   }
   .story_contant .content img {
     margin: 0 auto 15px;
